# template

./: .buildinfo  README.md  build_docs.sh  genindex.html  index.html  objects.inv  project_template_objective.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: docs.yml  test.yml
_sources/: index.rst.txt
_sources/source/: template.rst.txt
docs/: conf.py
source/: template.html
src/template/: main.py
test/: tests.html
tests/: test_main.py
