[metadata]
name = template
version = 0.0.1
description = project template 
long_description = file: README.md
long_description_content_type = text/markdown
author = AI Team
author_email = amrahmedelagoz@gmail.com
url = https://github.com/Andalusia-Data-Science-Team/template
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords = machine learning, python

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

install_requires=
    pandas==2.2.2
    scikit-learn==1.5.1
    numpy==2.0.2
    scipy==1.14.1


[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
testing =
    pytest==8.3.4
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-autodoc-typehints==2.5.0
    pytest-cov==6.0.0
    mypy==1.13.0
    flake8==7.1.1
    tox==4.23.2
    black==24.10.0
    pytest-mock==3.14.0
    pytest-watcher==0.4.3

[options.package_data]
template = py.typed


[flake8]
max-line-length = 90
extend-ignore = E501